--- a/engine-ui/packages/console-ui/CHANGELOG
+++ b/engine-ui/packages/console-ui/CHANGELOG
@@ -1,9 +1,11 @@
 # DATA-STACK 
 
 # 更新日志 | [部署文档](./Deploy.md)
- > 版本：DTinsight v2.11.0 <br>
- > 日期：2018-10-19
+> 版本：DTinsight v2.12.0 <br>
+> 日期：2018-11-12
 
-- 【控制台】`新增`多集群管理功能
-- 【 其他 】`优化`UI细节，Bug修复 [更多](http://redmine.prod.dtstack.cn/projects/dtinsight-v2-11-0/issues)
+- 【开发套件】修复若干模块Theme切换不完整的问题
+- 【开发套件】修复数据同步不支持多变量的问题
+- 【开发套件】修复数据同步字段预览时样式变形的问题
+- 【 其他 】`优化`UI细节，Bug修复 [更多](http://redmine.prod.dtstack.cn/projects/dtinsight-v2-12-0/issues)
 
