--- a/engine-ui/packages/console-ui/CHANGELOG
+++ b/engine-ui/packages/console-ui/CHANGELOG
@@ -1,11 +1,13 @@
 # DATA-STACK 
 
 # 更新日志 | [部署文档](./Deploy.md)
-> 版本：DTinsight v2.12.0 <br>
-> 日期：2018-11-02
+ > 版本：DTinsight v3.0.0 <br>
+ > 日期：2018-11-16
 
-- 【开发套件】修复若干模块Theme切换不完整的问题
-- 【开发套件】修复数据同步不支持多变量的问题
-- 【开发套件】修复数据同步字段预览时样式变形的问题
-- 【 其他 】`优化`UI细节，Bug修复 [更多](http://redmine.prod.dtstack.cn/projects/dtinsight-v2-12-0/issues)
+`注意：v3.0.0 为一次大版本升级！` 
 
+- 【 重点 】新增`分析引擎`应用
+- 【 重点 】`拆分`实时/离线任务为独立应用
+- 【 重点 】实时任务运维新增`数据曲线`、`任务参数`、`告警信息`、`数据延迟`、`checkpoint`等功能
+- 【 其他 】离线任务工作流支持`编辑节点名称`
+- 【 其他 】大量细节`优化`，Bug修复 [更多](http://redmine.prod.dtstack.cn/projects/dtinsight-v3_0_0)
