--- a/engine-ui/packages/console-ui/CHANGELOG
+++ b/engine-ui/packages/console-ui/CHANGELOG
@@ -1,13 +1,10 @@
 # DATA-STACK 
 
-# 更新日志 | [部署文档](./Deploy.md)
- > 版本：DTinsight v3.0.0 <br>
- > 日期：2018-11-16
+# 更新日志 | [部署文档](./Deploy.md) 
+ > 版本：DTinsight v3.0.1 <br>
+ > 日期：2018-11-22
 
-`注意：v3.0.0 为一次大版本升级！` 
-
-- 【 重点 】新增`分析引擎`应用
-- 【 重点 】`拆分`实时/离线任务为独立应用
-- 【 重点 】实时任务运维新增`数据曲线`、`任务参数`、`告警信息`、`数据延迟`、`checkpoint`等功能
-- 【 其他 】离线任务工作流支持`编辑节点名称`
+- 【 控制台 】修复普罗米修斯配置参数错误Bug
 - 【 其他 】大量细节`优化`，Bug修复 [更多](http://redmine.prod.dtstack.cn/projects/dtinsight-v3_0_0)
+
+
